# blog

251205_pydantic_evals/: pydantic_01.ipynb  pyproject.toml
ai-agent/: app.py  pyproject.toml
ai-agent-wikipedia/: notebook.ipynb  pyproject.toml  readme.md  streamlit.py
claude3-vision/: claud3-vision.ipynb  result_blog.csv
rag-youtube/: notebook.ipynb  pyproject.toml
