[tool.poetry]
name = "rag-youtube"
version = "0.1.0"
description = ""
authors = ["cygkichi <9675041+cygkichi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
notebook = "^7.1.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.6"
langchain-community = "^0.0.38"
youtube-transcript-api = "^0.6.2"
google-api-python-client = "^2.129.0"
pandas = "^2.2.2"
langchain = "^0.1.20"
grandalf = "^0.8"
langchain-text-splitters = "^0.0.1"
tiktoken = "^0.6.0"
tqdm = "^4.66.4"
pytube = "^15.0.0"
langchain-chroma = "^0.1.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
